# reduce-llms-for-testing

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: bohemian_rhapsody.txt  pale_blue_dot.txt
reduce_llms_for_testing/: common.py  infer.py  main.py  train.py
reduce_llms_for_testing/reduce_utils/: reduce.py
reduce_llms_for_testing/reduce_utils/models_utils/: __init__.py  gemma_2_2b.py  llama_3_8b.py  phi_3_mini.py
