[tool.poetry]
name = "reduce-llms-for-testing"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["ltoniazzi"]
packages = [{include = "reduce_llms_for_testing"}]

[tool.poetry.dependencies]
python = "^3.10, <=3.13"
transformers = "*"
torch = "*"
peft = "*"
huggingface_hub = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
ruff = "^0.1.14"
pytest-mock = "^3.12.0"

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,docs,tools}/*" = ["E402", "F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
